--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=80
+github.client.id=2859958f9f059979ed3a
+github.client.secret=10a5ce491fd6b7cd137efdc1ac763261f7d3b6fc
+github.redirect.uri=http://localhost:8887/callback
